<resources>
    <string name="app_name" translatable="false">MyMensor</string>
    <string name="action_settings">Settings</string>
    <string name="double_bck_exit">Press Back twice quickly to exit!</string>
    <string name="button_exit">Press Button twice quickly to exit!</string>
    <string name="starting_to_load_assets">Starting.....</string>
    <string name="waiting_to_load_assets">Loading.....</string>
    <string name="still_loading_assets">Loading.....</string>
    <string name="almost_finished_loading_assets">Almost there.....</string>
    <string name="load_assets_finished">Ready !!!</string>
    <string name="vp_name">VP#</string>
    <string name="vp_touched">VP#</string>
    <string name="date_vp_touched_not_acquired">never</string>
    <string name="date_vp_touched_first_acquisition">now</string>
    <string name="date_vp_touched_last_acquired">Last acquired</string>
    <string name="date_vp_touched_free_to_be_acquired">Available from</string>
    <string name="date_vp_capture_shown">Media created on</string>
    <string name="vp_touched_info">Info about this VP</string>
    <string name="vp_out_of_bounds">VP out of Bounds!!!! Increase qty with QtyVp++.</string>
    <string name="camera_focusing">Wait!!! Camera Focusing!!!</string>
    <string name="camera_image_captured">image captured</string>
    <string name="user_name">User name:</string>
    <string name="button_ok">OK</string>
    <string name="button_text">Close VP Photo</string>
    <string name="button_alpha_toggle">Transparent</string>
    <string name="button_flash_toggle">TORCH ON</string>
    <string name="button_show_vp_captures">See Captures</string>
    <string name="button_show_previous_vp_capture">\u003c</string>
    <string name="button_show_next_vp_capture">\u003e</string>
    <string name="button_text_request_photo">Configure VP</string>
    <string name="button_sav_desc_vp_text">DscVpTxt</string>
    <string name="button_text_increase_qtyvps">Inc VP Qty</string>
    <string name="button_text_decrease_qtyvps">Dec VP Qty</string>
    <string name="button_text_save_tracking_vps_data">Save VPs</string>
    <string name="button_ambiguous_vp_toggle">Amb VP</string>
    <string name="button_flash_torch_vp_toggle">FLASH</string>
    <string name="button_super_single_vp_toggle">Sup VP</string>
    <string name="button_id_20mm_vp_toggle">ID 20mm</string>
    <string name="button_id_100mm_vp_toggle">ID 100mm</string>
    <string name="button_accept_vp_photo">OK</string>
    <string name="button_reject_vp_photo">Repeat</string>
    <string name="is_photo_ok">Is Photo captured ok? (You can zoom in!!!)</string>
    <string name="desc_vp_empty">Empty</string>
    <string name="vp_00">AR OFF</string>
    <string name="vpNotAcquiredStatus">--</string>
    <string name="vpAcquiredStatus">OK</string>
    <string name="not_all_vps_acquired">Error: not all vps acquired</string>
    <string name="vp_location_des_text_missing">Error: vp location text missing</string>
    <string name="no_photo_captured_in_this_vp">No local media captured in this vp, please check the web.</string>
    <string name="logging_in">Logging in to server...</string>
    <string name="authlabel" translatable="false">MyMensor</string>
    <string name="userstate_loggedout">Please log in.</string>
    <string name="userstate_loggedin">Authorized, using credentials from</string>
    <string name="start_config">Configuration</string>
    <string name="start_cap">Image Capture</string>
    <string name="login_btn_txt">LOGIN</string>
    <string name="logout_btn_txt">LOGOUT</string>
    <string name="accountname">Username</string>
    <string name="Password">Password</string>
    <string name="Email">E-mail</string>
    <string name="SignIn">LOG EXISTING USER IN</string>
    <string name="SignUp">Register</string>
    <string name="newuser">CREATE NEW USER</string>
    <string name="Name">Name</string>
    <string name="CreateAcc">Create Account</string>
    <string name="AlreadyMember">Already a member?</string>
    <string name="emailusr">Email</string>
    <string name="checkcfgfiles">Please check your setup files. Sorry, closing now...</string>
    <string name="hostconn_not">Disconnected from server.</string>
    <string name="hostconn_con">Connecting to server...</string>
    <string name="hostconn_yes">Connected to server.</string>
    <string name="vp_capture_success">VP capture successful. Saving now...</string>
    <string name="vp_capture_failure">VP capture failed, please refer to configuration instructions, try again or change method.</string>
    <string name="vp_acquisition_failure">VP photo captured, but augmentation acquisiton failed, please refer to configuration instructions, try again or change method.</string>
    <string name="vp_capture_placeholder_description">Description of VP#</string>
    <string name="no_camera">This device has no camera. Closing app!</string>
    <string name="permrequired">Permissions Requred</string>
    <string name="permmessage">Please enable the requested permissions in the app settings in order to use this app</string>
    <string name="cancel">Cancel</string>
    <string name="undo">UNDO</string>
    <string name="loadingcfgactvty">Opening VPs setup.</string>
    <string name="loadingimgcapactvty">Back to open the main app.</string>
    <string name="arSwitchText">AR</string>
    <string name="ok">OK</string>
    <string name="usingcerttimeistrue">App time is certified, even if device clock is not.</string>
    <string name="usingcerttimeisfalse">App time is NOT certified, using device clock.</string>
    <string name="certify">CERTIFY</string>
    <string name="tryingtocertifytime">Calling time server, please assure internet connection.</string>
    <string name="arswitchison">AR is ON, automatically capturing the configured VPs.</string>
    <string name="arswitchisoff">AR is OFF, use the camera button to capture VPs.</string>
    <string name="vp_notconfigurable">This is a special VP for photos without AR, thus not configurable.</string>
    <string name="vpcfgfileloadfailed">Vps configuration file load failed.</string>
    <string name="vp_capture_placeholder_description_freevp">Media captured without using Augmented Reality</string>
    <string name="to">" to "</string>
    <string name="qtyvps_increased">Quantity of VPs increased from</string>
    <string name="qtyvps_decreased">Quantity of VPs decreased from</string>
    <string name="nomymensoraccount">No MyMensor account!</string>
    <string name="confirmconfigloading">Close image capture and call setup?</string>
    <string name="confirm">CONFIRM</string>
    <string name="callingconfigactivity">Closing and calling setup...</string>
    <string name="takephoto">Press camera button to take photo. Stay still until VP is configured!!!</string>
    <string name="confirmimagecaploading">Close setup and call image capture?</string>
    <string name="callingimagecapactivity">Closing and calling image capture...</string>
    <string name="configready">Ready to setup.</string>
    <string name="imagecapready">Ready to capture images.</string>
    <string name="markerid_already_used">This id marker was used already in another VP, please use a different one.</string>
    <string name="button_marker_id">ID</string>
    <string name="textview_vp_ar">AR</string>
    <string name="position_is_certified">Location updated.</string>
    <string name="turn_off_location_updates">Turn OFF</string>
    <string name="position_not_certified">Location NOT UPDATED</string>
    <string name="turn_on_location_updates">TURN ON</string>
    <string name="connectedtoserver">Connected to server.</string>
    <string name="notconnectedtoserver">Not connected to server.</string>
    <string name="tryingtoconnecttoserver">Calling server, please assure internet connection.</string>
    <string name="trytoconnect">CONNECT</string>
    <string name="deletinglocalandremote">Delete local and remote currently on screen media.</string>
    <string name="deletinglocal">Delete locally media currently on screen.</string>
    <string name="keepinglocalandremote">Operation cancelled.</string>
    <string name="keepinglocal">Operation cancelled.</string>
    <string name="local_file_deleted">Local file succesfully deleted.</string>
    <string name="sharingphotousing">Share this photo capture using:</string>
    <string name="sharingvideousing">Share this video capture using:</string>
    <string name="off">OFF</string>
    <string name="zero">0</string>
    <string name="pta">Please try again.</string>
    <string name="loginfailed">Login Failed</string>
    <string name="nosetupfiles">Error: Setup files missing.</string>
    <string name="nosetupfileexp">There are no local setup files and no connection to MyMensor server. If you decide to continue new files will be created and eventual old ones will be ERASED. Do you wish to continue?</string>
    <string name="continu">CONTINUE</string>
    <string name="leaveapp">LEAVE APP</string>
    <string name="sdk_lower_then_kitkat">This app is not compatible with Android versions prior to KitKat. Closing now.</string>
    <string name="error_to_obtain_sha256">Error while retrieving Media Signature.</string>
    <string name="first_time_usage">Creating local configuration files.</string>
    <string name="start_with_server_connection">Connected to server. Starting with latest configuration.</string>
    <string name="start_with_no_server_connection">No connection with server. Using locally available configuration.</string>
    <string name="checkcfgfiles_online">Something wrong happened while downloading configuration from server. Please try again.</string>
    <string name="checkcfgfiles_offline">Something wrong happened while reading local configuration. Please try again and contact support if problem persists.</string>
    <string name="remark">Write remark about capture</string>
    <string name="sizelimit100">Limited to 1000 characters!!!</string>
    <string name="cantadduser">Not possible to add user</string>
    <string name="onlyoneperdev">Only one user is allowed per device. To change user you first need to logout.</string>
    <string name="error_while_playing_video">An error ocurred while playing video.</string>
    <string name="caution_no_server">MyMensor Server is not Reachable</string>
    <string name="caution_proceed_or_not">If you proceed a new configuration will be created and will overwrite (if you have one) your existing one.</string>
    <string name="caution_proceed">PROCEED</string>
    <string name="caution_exit">EXIT</string>
    <string name="sharingphotolinkusing">Share the link to this photo using:</string>
    <string name="sharingvideolinkusing">Share the link to this video using:</string>
    <string name="share_media_link">link</string>
    <string name="share_media_content">media</string>
    <string name="error_mob_client_qty_exceeded">Maximum quantity of clients connected to server exceeded, closing...</string>
    <string name="error_no_server_connection">Cannot proceed due to error with server connection, closing...</string>
    <string name="error_trial_exp_continuing_with_no_server_connection">Trial period has expired, continuing with no server connection.</string>
    <string name="error_sub_exp_continuing_with_no_server_connection">Subscription expired, continuing with no server connection.</string>
    <string name="accountemail">E-mail</string>
    <string name="registrationfailed">Registration Failed</string>
    <string name="creatinguser">Creating user</string>
    <string name="waitingforserver">Waiting for server...</string>
    <string name="checkfirsttxt">I\'ve read and agreed with the</string>
    <string name="checksecondtxt">and</string>
    <string name="checkfirstlink">Terms of Service</string>
    <string name="checksecondlink">Privacy Policy</string>
</resources>