<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_mymaccauthenticator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_mymaccauthenticator">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        >

        <ImageView
            android:id="@+id/mainactivity_logo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/logo_mymensor"
            android:layout_gravity="center_horizontal"
            />

        <TextView android:id="@+id/accountEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/accountemail"
            android:padding="10dp"
            android:textStyle="bold"
            android:visibility="gone"
            />

        <EditText android:id="@+id/accountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/accountname"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            />

        <EditText android:id="@+id/accountPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:padding="10dp"
            />

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/newuser" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/SignIn" />

        <LinearLayout
            android:id="@+id/termslinearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/terms_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/terms_first_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/checkfirsttxt" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/terms_first_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:clickable="true"
                        android:onClick="onClickFirstLink"
                        android:text="@string/checkfirstlink"
                        android:textColor="#00f" />

                    <TextView
                        android:id="@+id/terms_second_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/checksecondtxt" />

                    <TextView
                        android:id="@+id/terms_second_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:clickable="true"
                        android:onClick="onClickSecondLink"
                        android:text="@string/checksecondlink"
                        android:textColor="#00f" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <Button android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/SignUp"
            android:padding="10dp"
            android:visibility="gone"
            />

    </LinearLayout>
</RelativeLayout>
