<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ImageCapActivity"
    android:padding="0dp">

    <org.opencv.android.JavaCameraView
        android:id="@+id/config_javaCameraView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        opencv:show_fps="true"
        />

    <com.mymensor.TouchImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/descvpblank"
        android:visibility="gone"
        />

    <ListView
        android:id="@+id/vp_list"
        android:padding="1dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:background="@android:color/transparent"
        android:layout_width="110dp" />

    <ImageView
        android:id="@+id/waitingTrkLoading"
        android:layout_width="252.67dp"
        android:layout_height="252.33dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/circulo_seamensor"
        android:padding="0dp"
        android:visibility="gone"        />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="true"
        android:onClick="onButtonClick"
        android:clickable="true"
        android:padding="4dp"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:src="@drawable/logoseamensor300dpi"
        android:visibility="visible" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/button3"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_ok"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonRequestPhoto"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/button2"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_text_request_photo"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonIncreaseQtyVps"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/vp_list"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_text_increase_qtyvps"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonDecreaseQtyVps"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/buttonIncreaseQtyVps"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_text_decrease_qtyvps"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonSaveTrackingVpsData"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/buttonDecreaseQtyVps"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_text_save_tracking_vps_data"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonAmbiguousVpToggle"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imageView1"
        android:layout_below="@+id/descVPEditText"
        android:background="@drawable/custom_button"
        android:textColor="#000000"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_ambiguous_vp_toggle"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonFlashTorchVpToggle"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imageView1"
        android:layout_below="@+id/buttonAmbiguousVpToggle"
        android:background="@drawable/custom_button"
        android:textColor="#000000"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_flash_torch_vp_toggle"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonSuperSingleVpToggle"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imageView1"
        android:layout_below="@+id/buttonFlashTorchVpToggle"
        android:background="@drawable/custom_button"
        android:textColor="#000000"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_super_single_vp_toggle"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonId20mmToggle"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imageView1"
        android:layout_below="@+id/buttonSuperSingleVpToggle"
        android:background="@drawable/custom_button"
        android:textColor="#000000"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_id_20mm_vp_toggle"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonId100mmToggle"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imageView1"
        android:layout_below="@+id/buttonId20mmToggle"
        android:background="@drawable/custom_button"
        android:textColor="#000000"
        android:onClick="onButtonClick"
        android:padding="10dp"
        android:text="@string/button_id_100mm_vp_toggle"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/descVPEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:lines="2"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView2"
        android:gravity="left|top"
        android:text="@string/desc_vp_empty"
        android:textColor="@android:color/holo_blue_light"
        android:background="@android:color/background_dark"
        android:visibility="gone"
        android:inputType="text|textCapSentences|textAutoCorrect"
        android:imeOptions="actionDone"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/vp_list"
        android:gravity="center"
        android:text="@string/vp_00"
        android:background="@android:color/holo_blue_dark"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/vpAcquiredStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_toEndOf="@id/vp_list"
        android:layout_below="@+id/textView2"
        android:gravity="center"
        android:text="@string/vpNotAcquiredStatus"
        android:textColor="@android:color/holo_blue_light"
        android:background="@android:color/background_dark"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/buttonAcceptVpPhoto"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="110dp"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:padding="0dp"
        android:background="@drawable/yesbutton"
        android:textColor="#000000"
        android:textSize="20dp"
        android:onClick="onButtonClick"
        android:clickable="true"
        android:text="@string/button_accept_vp_photo"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonRejectVpPhoto"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="235dp"
        android:layout_marginStart="4dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="0dp"
        android:background="@drawable/nobutton"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:onClick="onButtonClick"
        android:clickable="true"
        android:text="@string/button_reject_vp_photo"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/imageViewTarget"
        android:layout_width="252.67dp"
        android:layout_height="252.33dp"
        android:src="@drawable/targetwhite"
        android:padding="0dp"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent" />

</RelativeLayout>
