<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="2dp"
        android:id="@+id/MainActivityLinearLayout"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/mainactivity_logo"
            android:layout_width="300dp"
            android:visibility="visible"
            android:src="@drawable/animlogoseamensor20"
            android:layout_height="150dp">
        </ImageView>

        <TextView
            android:id="@+id/userlogstate_message"
            android:layout_width="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/userstate_loggedout"
            android:textAlignment="center"
            android:textColor="#FF464646"
            android:visibility="visible"
            android:textSize="18sp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp">

            <Button
                android:text="@string/login_btn_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonlog"
                android:gravity="center_vertical"
                android:onClick="onButtonClick"
                android:layout_margin="4dp" />

            <Button
                android:text="@string/start_config"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonconfig"
                android:gravity="center_vertical"
                android:onClick="onButtonClick"
                android:layout_margin="4dp" />

            <Button
                android:text="@string/start_cap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttoncap"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:onClick="onButtonClick"
                android:layout_margin="4dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
